# clippin

./: .gitignore.orig  Cargo.toml  README.md
src/: main.rs
src/modules/: clipboard.rs  window.rs
