[package]
name = "clippin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.2"
softbuffer = { git = "https://github.com/rust-windowing/softbuffer" }
arboard = "3.2.0"
image = "0.23.14"
thiserror = "1.0.39"
anyhow = "1.0.69"
tray-item = "0.7.1"
